PEH-12052 Fixed - Study name alignment

--- a/force-app/main/community-pages-pp/trial-search/aura/TrialItem/TrialItem.css
+++ b/force-app/main/community-pages-pp/trial-search/aura/TrialItem/TrialItem.css
@@ -114,8 +114,7 @@
         max-height: 40vh !important;
     }
     .THIS .ctp-study-code-name {
-        width: 82% !important;
-        line-break: anywhere;
+        width: 100% !important;
         padding-right: 2.3rem;
     }
 }
